--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,49 @@
+accelerate==0.23.0
 aiohttp==3.8.5
 aiosignal==1.3.1
+asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
 colorama==0.4.6
+diffusers==0.21.2
 discord==2.3.2
 discord.py==2.3.2
+Django==4.2.5
+filelock==3.12.4
 frozenlist==1.4.0
+fsspec==2023.9.1
+huggingface-hub==0.17.2
 idna==3.4
+image==1.5.33
+importlib-metadata==6.8.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+mpmath==1.3.0
 multidict==6.0.4
+networkx==3.1
+numpy==1.26.0
 openai==0.28.0
+packaging==23.1
+Pillow==10.0.1
+psutil==5.9.5
 python-dotenv==1.0.0
+PyYAML==6.0.1
+regex==2023.8.8
 requests==2.31.0
+safetensors==0.3.3
+six==1.16.0
+sqlparse==0.4.4
+sympy==1.12
+tokenizers==0.13.3
+torch==2.0.1+cu118
+torchaudio==2.0.2+cu118
+torchvision==0.15.2+cu118
 tqdm==4.66.1
+transformers==4.33.2
+typing_extensions==4.8.0
+tzdata==2023.3
 urllib3==2.0.4
 yarl==1.9.2
+zipp==3.17.0
