--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DISCORD_BOT_TOKEN = "MTExODczMzExODQ3NjY2NDg4Mg.GxGm5A.wpaIo3fyWwJ4vEAykbzCYS_LotEoGAXLRcwFdw"
-OPENAI_API_KEY = "sk-proj-JBqoHumZCcxdomvOsP9TT3BlbkFJ7804ScRtGUw3nJgOKSFB"
+DISCORD_BOT_TOKEN = ""
+STABILITY_API_KEY = ""
+ANTHROPIC_API_KEY = ""
